# hermes-link

./: .gitignore  README.md  pyproject.toml
docs/: cloudflare-tunnel-vps.md  remote-profiles.md  security-checklist.md  two-box-lan-test.md  windows-durable-receiver.md
docs/plans/: 2026-06-09-hermes-link-v0.md
hermes_link/: __init__.py  audit.py  cli.py  config.py  crypto.py  executor.py  hub.py  introspection.py  models.py  protocol.py  server.py  store.py
scripts/: install-jarvis-worker.ps1
tests/: test_cli.py  test_config.py  test_crypto.py  test_docs.py  test_executor.py  test_hub.py  test_link_features.py  test_protocol.py  test_server.py  test_store.py
