[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-link"
version = "0.1.0"
description = "LAN connector for paired Hermes Agent nodes"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Hermes Link contributors"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
hermes-link = "hermes_link.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
